<resources>
    <string name="app_name">مواريث</string>
    <string name="how_much_money">مقدار التركة</string>
    <string name="dead_gender">نوع المتوفي</string>
    <string name="hanbaly">حنبلي</string>
    <string name="hanafy">حنفي</string>
    <string name="maleky">مالكي</string>
    <string name="shafeey">شافعي</string>
    <string name="man_dead">متوفي</string>
    <string name="husband">زوج</string>
    <string name="default_zero">0</string>
    <string name="default_value">--</string>
    <string name="wife">زوجة</string>
    <string name="daughter_son">بنت بنت</string>
    <string name="daughter_girl">ابن بنت</string>
    <string name="son_boy">بنت ابن</string>
    <string name="son_girl">ابن ابن</string>
    <string name="alive_son">ولد ذكر حي</string>
    <string name="alive_daughter">ولد أنثى حية</string>
    <string name="dead_son">ابن متوفي</string>
    <string name="dead_daughter">بنت متوفية</string>
    <string name="father">والد</string>
    <string name="woman_dead">متوفية</string>
    <string name="mother">والدة</string>
    <string name="father_grandpa">جد لوالد</string>
    <string name="father_grandma">جدة لوالد</string>
    <string name="mother_grandpa">جد لوالدة</string>
    <string name="mother_grandma">جدة لوالدة</string>
    <string name="brother">أخ</string>
    <string name="sister">أخت</string>
    <string name="uncles">أعمام</string>
    <string name="father_aunts">عمات</string>
    <string name="mother_aunts">خالات</string>
    <string name="mother_uncles">أخوال</string>
    <string name="solve_problem">حل المسألة</string>
    <string name="new_problem">مسألة جديدة</string>
    <string name="female">أنثى</string>
    <string name="male">ذكر</string>
    <string name="str_ok_lbl">حسنا</string>
    <string name="dead_child_number">الابن المتوفي رقم</string>
    <string name="dead_daughter_number">البنت المتوفية رقم</string>
    <string name="alive">حي</string>
    <string name="required">مطلوب</string>
    <string name="please_enter_people">من فضلك اختر الورثة</string>
    <string name="solving_the_problem">جاري حل المسألة…</string>
    <string name="problem">مسألة ميراث</string>
    <string name="problem_origin">أصل المسألة</string>
    <string name="problem_origin_2">أصل المســــــــــــــــألــة</string>
    <string name="total_money">قيمة التركة</string>
    <string name="share_percent">نسبة النصيب</string>
    <string name="share_percent_per_person">نسبة النصيب للفرد</string>
    <string name="share_value">قيمة النصيب</string>
    <string name="share_value_per_person">نصيب الفرد</string>
    <string name="share">السهم</string>
    <string name="share_2">سهم</string>
    <string name="share_per_person">السهم للفرد</string>
    <string name="explanation">التحليل</string>
    <string name="bla_bla">مقاسمة الباقي بعد نصيب اصحاب الفروض تعصيبا مع الابناء للذكر مثل حظ الانثيين</string>
    <string name="prof">الدليل</string>
    <string name="problem_result">تقسيم التركة</string>
    <string name="intent_total_money">total money</string>
    <string name="intent_problem_origin">problem origin</string>
    <string name="adnan">عدنان</string>
    <string name="sunnah">السنّة</string>
    <string name="sheaa">الشيعة</string>
    <string name="doctrine">المذهب</string>
    <string name="enter_money"><b>ادخل مقدار التركة</b></string>
    <string name="splash">splash</string>
    <string name="explain_problem_result">شرح حل المسألة</string>
    <string name="explain_first_step">تحديد نسب الورثه في القرآن في هذه الحالة (ن)</string>
    <string name="explain_second_step_lbl">حساب مجموع النسب الوارثه في هذه الحالة (س)</string>
    <string name="explain_third_step_lbl">تطبيق معادلة القرآن في الميراث</string>
    <string name="explain_third_step_lbl2">لحساب الأنصبة التى حصل عليها مجموعات الوارثين في هذه الحالة (ص)</string>
    <string name="percent">نسبة</string>
    <string name="step_one_rv_ri_lbl_2">في القرآن الكريم</string>
    <string name="equal"> = </string>
    <string name="step_two_lbl_1">نصيب</string>
    <string name="equation">ص = ن / س</string>
    <string name="intent_data_lbl">data</string>
    <string name="explain_lbl_1"> مجموع النسب الوارثة في هذه الحالة : </string>
    <string name="explain_lbl_2"> ( ماترك ) </string>
    <string name="explain_lbl_3">س =</string>
    <string name="twenty_four">24</string>
    <string name="group">مجموعة</string>
    <string name="colom">:</string>
    <string name="plus">+</string>
    <string name="right_brackets">)</string>
    <string name="left_brackets">(</string>
    <string name="heads_count">عدد الرؤوس</string>
    <string name="son">الابن</string>
    <string name="multiply">x</string>
    <string name="daughter">الابنة</string>
    <string name="explain_fourth_step_lbl">حساب أنصبة الافراد الوارثة بمضاعفة الأسهم بمعامل تصحيح الأسهم</string>
    <string name="with_each_other">مجتمعين</string>
    <string name="divide">/</string>
    <string name="correction_number">معامل تصحيح الأسهم</string>
    <string name="constants">constants</string>
    <string name="correction_not_needed">لا حاجة الى تصحيح الأسهم</string>
    <string name="new_problem_origin">و تصح المســــألة مــــــن </string>
    <string name="has_been_distributed_without_increasing_or_decreasing">تم توزيعها على الورثه بدون زيادة ولا نقصان</string>
    <string name="enter_wives_number"><b>أدخل عدد الزوجات</b></string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="enter_sons_number"><b>أدخل عدد الأولاد الذكور الأحياء</b></string>
    <string name="enter_daughters_number"><b>أدخل عدد الأولاد الإناث الأحياء</b></string>
    <string name="enter_mother_uncle_number"><b>أدخل عدد الأخوال</b></string>
    <string name="enter_mother_aunt_number"><b>أدخل عدد الخالات</b></string>
    <string name="enter_sisters_number"><b>أدخل عدد الأخوات</b></string>
    <string name="enter_brothers_number"><b>أدخل عدد الإخوة</b></string>
    <string name="enter_father_uncle_number"><b>أدخل عدد الأعمام</b></string>
    <string name="enter_father_aunts_number"><b>أدخل عدد العمات</b></string>
    <string name="enter_dead_sons_number"><b>أدخل عدد الأولاد الذكور المتوفيين</b></string>
    <string name="enter_dead_daughters_number">أدخل عدد الأولاد الإناث المتوفيين</string>
    <string name="splash_libs_lbl">شرح الميراث في كتاب الله تعالى</string>
    <string name="video_link" translatable="false">https://www.youtube.com/playlist?list=PLgUV-mU7SdBPB0mnvSgFKIjQyh5qfj1BY</string>
    <string name="book_link" translatable="false">https://drive.google.com/file/d/1P_XHJ6l9QXUsD0_07_rEPcbWjSNJUPlY/view?usp=drivesdk</string>
    <string name="intro_link" translatable="false">https://drive.google.com/file/d/1UxeSZmb5mNqoCA4pUCy7xFPkDoIOIc_U/view?usp=sharing</string>
    <string name="readable_books">كتب مقروءة</string>
    <string name="watchable_videos">فيديوهات مرئية</string>
    <string name="wives_instructions">يتم ادخال عدد الزوجات بحد أقصى 4 زوجات</string>
    <string name="gender_instructions">يتم تحديد نوع المتوفى سواء ذكر او انثى لتحديد اذا كان لديه زوج او زوجة</string>
    <string name="money_instructions">يتم ادخال قيمة التركة في هذا الحقل و هي القيمة المالية التقديرية للتركة لمن يهمه الأمر \n فقط قم بتعديل الرقم 100 للقيمة المرادة</string>
    <string name="alive_sons_instructions">يتم ادخال عدد الأولاد الذكور الأحياء في هذا الحقل ان وجدوا \n و ان لم يوجد اولاد احياء فيترك فارغا</string>
    <string name="alive_daughter_instructions">يتم إدخال عدد الأولاد الإناث الأحياء في هذا الحقل ان وجدوا \n و ان لم يوجد اولاد احياء فيترك فارغ</string>
    <string name="dead_daughter_instructions">يتم إدخال عدد الأولاد الإناث المتوفيين في هذا الحقل ان وجدوا
        \n ثم ادخال عدد أولادهم ذكور و اناث ان وجدوا</string>
    <string name="dead_son_instructions">يتم ادخال عدد الابناء الذكور المتوفيين في هذا الحقل ان وجدوا
        \n ثم ادخال عدد أولادهم ذكور و اناث ان وجدوا</string>
    <string name="mother_instructions">اذا وجدت الوالدة فقم باختيار الحقل نعم
     \n و اذا كانت الوالدة متوفاه و يوجد جدة او جد من ناحية الوالدة فقم باختيار لا ثم اختر المتواجد من الجدود</string>
    <string name="father_instructions">اذا وجد الوالد فقم باختيار الحقل نعم
     \n و اذا كان الوالد متوفى و يوجد جدة او جد من ناحية الوالد فقم باختيار لا ثم اختر المتواجد من الجدود</string>
    <string name="brothers_question_instructions">اذا وجد إخوة أو أخوات فقم باختيار حقل نعم قم أدخل أعداد الإخوة
     \n و اذا ظهرت خانات الأعمام و الأخوال فقم بادخال أعدادهم سواء أحياء او متوفيين ان وجدوا</string>
    <string name="str_next_lbl">التالي</string>
    <string name="solve_problem_instructions">بعد الانتهاء من ادخال اعداد الورثة قم بالضغط على زر حل المسألة لعرض شاشة تقسيم التركة</string>
    <string name="libraries_btn_lbl">المكتبات</string>
    <string name="url">URL</string>
    <string name="intro">مقدمة تعريفية</string>
    <string name="book_title">الميراث في كتاب الله</string>
    <string name="new_problem_instructions">يمكنك الضغط على مسألة جديدة  لانشاء مسألة جديدة و تفريغ المدخلات</string>
    <string name="instructions">ارشادات حول التطبيق</string>
    <string name="husband_instructions">اذا كان المتوفي أنثى و لها زوج حي فقم باختيار الحقل نعم \n و اذا كان الزوج متوفى فقم باختيار الحقل لا</string>
    <string name="mother_grandma_instructions">اذا كانت الوالدة متوفاه و يوجد جدة من طرف الوالدة فقم باختيار الحقل نعم \n و اذا كانت الجدة من الوالدة متوفاه فقم باختيار الحقل لا</string>
    <string name="mother_grandpa_instructions" >اذا كانت الوالدة متوفية و يوجد جد من طرف الوالدة فقم باختيار الحقل نعم \n و اذا كان الجد من طرف الوالدة متوفى فقم باختيار الحقل لا</string>
    <string name="father_grandma_instructions">اذا كان الوالد متوفى و يوجد جدة من طرف الوالد فقم باختيار الحقل نعم \n و اذا كانت الجدة من طرف الوالد متوفاه فقم باختيار الحقل لا</string>
    <string name="father_grandpa_instructions" >اذا كان الوالد متوفى و يوجد جد من طرف الوالد فقم باختيار الحقل نعم \n و اذا كان الجد من طرف الوالد متوفى فقم باختيار الحقل لا</string>
    <string name="brothers_instructions" >عدد الإخوة الذكور الذي يتم إدخاله في التطبيق يشمل عدد الإخوة الأحياء + عدد الإخوة الأموات \nو يحصل الأخ على نصيبه الذي يحسبه له التطبيق \nاما اذا كان الأخ متوفيا فإن نصيبه يذهب إلى أولاده يقسمونه بينهم للذكر مثل حظ الأنثيين</string>
    <string name="sister_instructions" >عدد الأخوات الإناث الذي يتم إدخاله في التطبيق يشمل عدد الأخوات الأحياء + عدد الأخوات الأموات \nو تحصل الأخت على نصيبها الذي يحسبه لها التطبيق \nاما اذا كانت الأخت متوفاه فإن نصيبها يذهب إلى أولادها يقسمونه بينهم للذكر مثل حظ الأنثيين</string>
    <string name="father_uncle_instructions" >عدد الأعمام الذكور الذي يتم إدخاله في التطبيق يشمل عدد الأعمام الأحياء + عدد الأعمام الأموات \nو يحصل العم على نصيبه الذي يحسبه له التطبيق ،\nأما اذا كان العم متوفيا فان نصيبه يذهب الى أولاده يقسمونه بينهم للذكر مثل حظ الأنثيين</string>
    <string name="father_aunt_instructions" >عدد العمات الإناث الذي يتم إدخاله في التطبيق يشمل عدد العمات الأحياء + عدد العمات الأموات \nو تحصل العمة على نصيبها الذي يحسبه له التطبيق ،\nأما اذا كانت العمة متوفاه فان نصيبها يذهب الى أولادها يقسمونه بينهم للذكر مثل حظ الأنثيين</string>
    <string name="mother_uncle_instructions" >عدد الأخوال الذكور الذي يتم إدخاله في التطبيق يشمل عدد الأخوال الأحياء + عدد الأخوال الأموات \nو يحصل الخال على نصيبه الذي يحسبه له التطبيق، \nأما إذا كان الخال متوفيا فإن نصيبه يذهب إلى أولاده يقسمونه بينهم للذكر مثل حظ الأنثيين</string>
    <string name="mother_aunt_instructions" >عدد الخالات الإناث الذي يتم إدخاله في التطبيق يشمل عدد الخالات الأحياء + عدد الخالات الأموات \nو تحصل الخالة على نصيبها الذي يحسبه لها التطبيق، \nأما إذا كانت الخالة متوفاه فإن نصيبها يذهب إلى أولادها يقسمونه بينهم للذكر مثل حظ الأنثيين</string>
    <string name="renew">إعادة</string>
</resources>